[package]
name = "chup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = { version = "3.0.0-rc.4", features = ["derive"] }
colored = "2.0.0"
pbr = "1.0.4"
rand = "0.8.4"
reqwest = {version = "0.11.7", features = ["blocking", "json"] }
serde = { version = "1.0.131", features = ["derive"] }
serde_yaml = "0.8.23"
